# http-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  index.html  script.js
.cargo/: config.toml
.github/workflows/: binary-release.yml  build-validation.yml  docker-publish.yml
src/: api_error.rs  http_response.rs  lib.rs  logger.rs  main.rs  router.rs  static_files.rs  thread_pool.rs  utils.rs
src/api/: mod.rs  utils.rs
src/errors/: api_error.rs  http_parse_error.rs  mod.rs
src/websockets/: mod.rs  websocket_error.rs
testData/certs/: cert.pem  myKey.pem
testData/public/: custom_index.html  style.css
tests/: cli_integration.rs  default_api.rs  main.rs
tests/common/: utils.rs
tests/data/certs/: keyStore.p12
tests/data/public/: index.html  page.html
tests/suites/: cli_integration.rs  default_api.rs
