[package]
name = "scratch-server"
version = "0.1.0"
edition = "2021"
authors = ["radek00"]
license = "MIT"
description = "Simple HTTP Server"
readme = "README.md"
homepage = "https://github.com/radek00/http-server"
repository = "https://github.com/radek00/http-server"
keywords = ["http", "server", "cli"]
categories = ["command-line-utilities"]
exclude = [
    ".git/*",
    ".github/*",
    ".vscode/*",
    ".idea/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = "4.5.4"
mime_guess = "2.0.4"
native-tls = "0.2.11"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
termcolor = "1.4.1"
