[package]
name = "scratch-server"
version = "1.0.1"
edition = "2021"
authors = ["radek00"]
license = "MIT"
description = "Simple HTTP Server"
readme = "README.md"
homepage = "https://github.com/radek00/http-server"
repository = "https://github.com/radek00/http-server"
keywords = ["http", "server", "cli"]
categories = ["command-line-utilities"]
exclude = [
    ".git/*",
    ".github/*",
    ".vscode/*",
    ".idea/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
clap = "4.6.1"
flate2 = "1.1.9"
include_dir = "0.7.4"
mime_guess = "2.0.5"
native-tls = { version = "0.2.18", features = ["vendored"] }
percent-encoding = "2.3.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
termcolor = "1.4.1"

[build-dependencies]
regex = "1.12.4"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
